# goggings-habit-tracker

./: .dockerignore  .env.backup  .env.example  .gitignore  App.tsx  DOCUMENTATION.md  Dockerfile  constants.ts  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  types.ts
.agent/workflows/: deploy_to_render.md
backend/: Dockerfile  alembic.ini  generate_erd.py  goggins.db  modal_app.py  openapi.yaml  pyproject.toml  test.db
backend/alembic/: env.py
backend/alembic/versions/: 1c38a0fab345_multi_user_init.py  4765a2fec95f_add_hashed_password_to_user.py
backend/app/: auth_utils.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/routers/: ai.py  auth.py  goals.py  resources.py  tasks.py
backend/tests/: test_ai_integration.py  test_auth.py  test_database.py  test_funding.py  test_live_auth.py  test_live_story.py  test_mission_flow.py  test_settings_update.py  verify_api.py  verify_db.py  verify_prod_db.py  verify_prod_db_exact.py
components/: ActualTimeModal.tsx  BetModal.tsx  CharacterStatus.tsx  CompletionBonusModal.tsx  DailyCompletionBar.tsx  Goals.tsx  Header.tsx  Icons.tsx  MotivationModal.tsx  ObjectiveHeatmapView.tsx  PomodoroTimer.tsx  SideQuests.tsx  TaskModal.tsx
context/: AuthContext.tsx
frontend/: App.tsx  Dockerfile  README.md  constants.ts  index.html  nginx.conf  package-lock.json  package.json  types.ts
frontend/components/: AllTasksView.tsx  Auth.tsx  CalendarView.tsx  Chatbot.tsx  Diary.tsx  (+18 more)
hooks/: useLocalStorage.ts
services/: firebase.ts  geminiService.ts
utils/: dateUtils.ts
(+17 files in other folders)
